scripts/eks/appsignals/sample-app/alb-ingress/petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pet-clinic-frontend-java
                port:
                  number: 8080
          - path: /customers-service-java
            pathType: Prefix
            backend:
              service:
                name: customers-service-java
                port:
                  number: 8081
          - path: /vets-service-java
            pathType: Prefix
            backend:
              service:
                name: vets-service-java
                port:
                  number: 8083
          - path: /admin-server-java
            pathType: Prefix
            backend:
              service:
                name: admin-server-java
                port:
                  number: 9090
          - path: /billing-service-python
            pathType: Prefix
            backend:
              service:
                name: billing-service-python
                port:
                  number: 8800
          - path: /config-server
            pathType: Prefix
            backend:
              service:
                name: config-server
                port:
                  number: 8888
          - path: /discovery-server
            pathType: Prefix
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761
          - path: /insurance-service-python
            pathType: Prefix
            backend:
              service:
                name: insurance-service-python
                port:
                  number: 8000
          - path: /nutrition-service-nodejs
            pathType: Prefix
            backend:
              service:
                name: nutrition-service-nodejs
                port:
                  number: 3000
          - path: /visits-service-java
            pathType: Prefix
            backend:
              service:
                name: visits-service-java
                port:
                  number: 8082
